updated style.css - wrap fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1379,9 +1379,9 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0rem 3rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
+  margin: 0rem 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .he-right-content,
@@ -1401,17 +1401,19 @@ textarea:focus {
 .app-div {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center; 
   align-items: center; 
+  margin: 0 1rem;
+  max-width: 100%; /* Ensure the element doesn't exceed the screen width */
+  overflow-x: hidden; /* Hide horizontal overflow */
 }
 
 .app-functions {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 1rem 0;
-  margin: 0 auto;
+  padding: 1rem 1rem;;
+  margin: 0 1rem;
   justify-content: center;
   align-items: center;
 }
@@ -1427,7 +1429,14 @@ textarea:focus {
   flex: 2;
   padding-top: 0;
   margin-left: 1rem;
-  padding: 0 3rem;
+  padding: 0 1cm;
+}
+
+@media screen and (max-width 820px) {
+  .functions-explanation {
+    margin-left: 0;
+    padding: 0 1rem;
+  }
 }
 
 .functions-explanation h3 {
@@ -1436,7 +1445,7 @@ textarea:focus {
   border-radius: 1.25rem;
   padding: 0.5rem 1rem;
   box-shadow: 0 0.0625rem 0.1875rem #2e2e2e;
-  width: 47%
+  width: 50%;
 }
 
 .functions-div {
@@ -1896,7 +1905,7 @@ input.check-toggle-round-flat:checked+label:after {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    padding: 2rem 2rem;
+    padding: 2rem 0rem;
   }
 
   .functions-explanation p {
@@ -2253,7 +2262,7 @@ input.check-toggle-round-flat:checked+label:after {
 @media screen and (max-width: 820px) {
 
   .bckg.blue.app-div {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
   }
 
